# try_cmake_2

./: CMakeLists.txt
src/: lib.cpp  lib.h
test/: CMakeLists.txt  test.cpp
tests/: test.cpp
